<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history.HistoryActivity"
    android:background="@color/lightGray">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStartWithNavigation="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical"
        android:background="@color/lightGray">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
        <com.prometteur.cpapp.utils.TextViewCustomFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_which_period_do_you_need_history"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="5dp"
            />
        <RadioGroup
            android:id="@+id/rgFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="5dp"
            >
            <com.prometteur.cpapp.utils.RadioButtonCustomFont
                android:id="@+id/rbLastMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_month"
                android:layout_weight="1"
                />
            <com.prometteur.cpapp.utils.RadioButtonCustomFont
                android:id="@+id/rbThreeMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_3_months"
                android:layout_weight="1"
                />
        </RadioGroup>
</LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:paddingBottom="@dimen/_5sdp"
            android:clipToPadding="false"
            tools:listitem="@layout/todays_row"
            android:paddingTop="5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <include layout="@layout/activity_no_data"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>



